--- a/lang/en.json
+++ b/lang/en.json
@@ -14,7 +14,7 @@
   "footer": {
     "discover": "Discover",
     "contact": "Contact",
-    "contact_us": "Contact",
+    "contact_us": "Contact us",
     "copyright": "All rights reserved."
   },
   "not_found": {
@@ -271,6 +271,54 @@
           "occupation": "CEO of MESGO",
           "body": "Thanks to Bachacode Developers we were able to meet the requirements established by CBI Group to obtain our supplier number. The website they developed not only exceeded our expectations, but also facilitated the process and the presentation of our company."
         }
+      }
+    }
+  },
+  "contact": {
+    "metadata": {
+      "title": "Contact"
+    },
+    "hero": {
+      "title": "Contact",
+      "subtitle": "need a quick answer?",
+      "cards": {
+        "email": "E-mail address",
+        "phone": "Phone number",
+        "whatsapp": "Click Here"
+      }
+    },
+    "form_section": {
+      "title": "do you want to get your project started?",
+      "subtitle": "send us a message with your proposal!",
+      "form": {
+        "name": {
+          "label": "Full name",
+          "placeholder": "Enter your full name"
+        },
+        "company_name": {
+          "label": "Company name",
+          "placeholder": "Enter your company name"
+        },
+        "email": {
+          "label": "E-mail address",
+          "placeholder": "Enter your email address"
+        },
+        "subject": {
+          "label": "Subject",
+          "placeholder": "Enter the subject of the message"
+        },
+        "message": {
+          "label": "Your message",
+          "placeholder": "Write us your message"
+        },
+        "errors": {
+          "required": "{field_name} is mandatory.",
+          "min": "{field_name} must have at least {amount} characters.",
+          "max": "{field_name} must have at most {amount} characters.",
+          "email": "This field must be in the format of an email,  e.g: example@email.com",
+          "recaptcha": "Something has failed with the reCAPTCHA key, get in touch with the administration by other communication options."
+        },
+        "button": "Send message"
       }
     }
   },
