feat: changed mesgo for jaimemorales website in portfolio

--- a/lang/en.json
+++ b/lang/en.json
@@ -254,6 +254,10 @@
         "mesgo": {
           "title": "Mesgo",
           "body": "Landing Page of Mexican Engineering Supply Group, a company specialized in the distribution of industrial materials, with a focus on electrical, electronic and mechanical engineering."
+        },
+        "jaimemorales": {
+          "title": "Jaime Morales",
+          "body": "Landing page of Jaime Morales, a cybersecurity expert that offers services and an specialized consultant, tutor and implementing AI with a cybersecurity approach."
         }
       }
     },
