--- a/lang/es.json
+++ b/lang/es.json
@@ -254,6 +254,10 @@
         "mesgo": {
           "title": "Mesgo",
           "body": "Landing Page de Mexican Engineering Supply Group, empresa especializada en la distribución de materiales industriales, con un enfoque en la ingeniería eléctrica, electrónica y mecánica."
+        },
+        "jaimemorales": {
+          "title": "Jaime Morales",
+          "body": "Landing page de Jaime Morales, experto en ciberseguridad que ofrece servicios de consultoría especializada, tutoría e implementación de IA con enfoque de ciberseguridad."
         }
       }
     },
