feat: updated homepage hero section

--- a/lang/en.json
+++ b/lang/en.json
@@ -24,9 +24,10 @@
   },
   "home": {
     "hero": {
-      "title": "Build your online presence",
+      "title": "We build amazing <websites>websites</websites> for small businesses",
       "subtitle": "with us your new project will become a reality",
-      "button": "START YOUR PROJECT"
+      "primary_button": "Start your project",
+      "secondary_button": "View our work"
     },
     "about": {
       "title": "Connecting the Future: Our Story in the World of Technology.",
