feat: added underline text effect to technology section title in homepage

--- a/lang/en.json
+++ b/lang/en.json
@@ -99,7 +99,7 @@
       }
     },
     "technologies": {
-      "title": "Our technologies",
+      "title": "Our <keyword>technologies</keyword>",
       "subtitle": "We are experts in state-of-the-art web development technology"
     },
     "clients": {
