--- a/lang/es.json
+++ b/lang/es.json
@@ -99,7 +99,7 @@
       }
     },
     "technologies": {
-      "title": "Nuestras tecnologías",
+      "title": "Nuestras <keyword>tecnologías</keyword>",
       "subtitle": "Somos expertos en la tecnología mas vanguardista del desarrollo web"
     },
     "clients": {
