feat: updated our clients section in homepage

--- a/lang/en.json
+++ b/lang/en.json
@@ -103,7 +103,7 @@
       "subtitle": "We are experts in state-of-the-art web development technology"
     },
     "clients": {
-      "title": "Our Clients",
+      "title": "Our <keyword>Clients</keyword>",
       "subtitle": "Those who have placed their trust in us",
       "testimonies": {
         "tailor": {
