--- a/lang/es.json
+++ b/lang/es.json
@@ -103,7 +103,7 @@
       "subtitle": "Somos expertos en la tecnología mas vanguardista del desarrollo web"
     },
     "clients": {
-      "title": "Nuestros Clientes",
+      "title": "Nuestros <keyword>Clientes</keyword>",
       "subtitle": "Los que han depositado su confianza en nosotros",
       "testimonies": {
         "tailor": {
