feat: redesigned ContactSection component

--- a/lang/en.json
+++ b/lang/en.json
@@ -390,8 +390,7 @@
     }
   },
   "contact_section": {
-    "body": "We believe in making possible any project our clients have in mind, are you interested in building your online presence?",
-    "highlight": "Work with us.",
+    "body": "We believe in making possible any project our clients have in mind, are you interested in building your online presence? <keyword>Work with us.</keyword>",
     "button": "Contact us"
   },
   "project_card": {
