--- a/lang/es.json
+++ b/lang/es.json
@@ -390,8 +390,7 @@
     }
   },
   "contact_section": {
-    "body": "Creemos en hacer posible cualquier proyecto que nuestros clientes tengan en mente, ¿estás interesado en construir tu presencia en línea?",
-    "highlight": "Trabaja con nosotros.",
+    "body": "Creemos en hacer posible cualquier proyecto que nuestros clientes tengan en mente, ¿estás interesado en construir tu presencia en línea? <keyword>Trabaja con nosotros.</keyword>",
     "button": "Contáctanos"
   },
   "project_card": {
