--- a/lang/en.json
+++ b/lang/en.json
@@ -160,8 +160,13 @@
       "title": "About Us"
     },
     "hero": {
-      "title": "About Us - Bachacode Developers",
-      "description": "At Bachacode Developers, we are dedicated to providing innovative and high quality web development solutions. Our team of experts works tirelessly to ensure the satisfaction of our clients, providing personalized services tailored to the specific needs of each project."
+      "title": "About <keyword>Bachacode Developers</keyword>",
+      "description": "At Bachacode Developers, we are dedicated to providing innovative and high quality web development solutions. Our team of experts works tirelessly to ensure the satisfaction of our clients, providing personalized services tailored to the specific needs of each project.",
+      "badges": {
+        "custom_solutions": "Custom Solutions",
+        "since": "Since 2021",
+        "customer_focus": "Customer Focus"
+      }
     },
     "our_values": {
       "title": "Our values",
