feat: updated our values section in about us page design to match new aesthetic

--- a/lang/en.json
+++ b/lang/en.json
@@ -169,7 +169,7 @@
       }
     },
     "our_values": {
-      "title": "Our values",
+      "title": "Our <keyword>values</keyword>",
       "subtitle": "Ethics that sets us apart from the competition",
       "cards": {
         "innovation": {
