--- a/lang/en.json
+++ b/lang/en.json
@@ -187,7 +187,7 @@
       }
     },
     "our_team": {
-      "title": "Our team",
+      "title": "Our <keyword>team</keyword>",
       "subtitle": "The professionals who will develop your idea",
       "cards": {
         "cristhian": {
