--- a/lang/es.json
+++ b/lang/es.json
@@ -187,7 +187,7 @@
       }
     },
     "our_team": {
-      "title": "Nuestro equipo",
+      "title": "Nuestro <keyword>equipo</keyword>",
       "subtitle": "Los profesionales que desarrollarán tu idea",
       "cards": {
         "cristhian": {
