feat: updated hero section of services page to match new aesthetic

--- a/lang/en.json
+++ b/lang/en.json
@@ -211,7 +211,7 @@
       "title": "Services"
     },
     "hero": {
-      "title": "Web Development and Consulting Services",
+      "title": "Custom <keyword>Web Development</keyword> & Expert Consultings",
       "subtitle": "Tailored digital solutions to drive your success",
       "button": "Schedule a meeting"
     },
