--- a/lang/es.json
+++ b/lang/es.json
@@ -211,7 +211,7 @@
       "title": "Servicios"
     },
     "hero": {
-      "title": "Servicios de Desarrollo y Consultoría Web",
+      "title": "<keyword>Desarrollo Web</keyword> a Medida y Consultoría Profesional",
       "subtitle": "Soluciones digitales a medida para impulsar tu éxito",
       "button": "Agenda una reunión"
     },
